--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,23 @@
 {% extends 'base.html' %} <!--상속을 받겠다라는 태그-->
-{% block tittle %}인덱스{% endblock %} 
+{% block tittle %}인덱스{% endblock %}
+
 {% block content %}
-<h1>인덱스 화면</h1>
-<ul>
-    <li><a href="{% url 'posts:post-list' %}">게시글 목록</a></li>
-</ul>
+<main>
+    <h1>인덱스 화면</h1>
+    <div class="card-list">
+        <p>다음 영상에서 만들기</p>
+    </div>
+    <div>
+        <nav>
+            <ul class="bottom-menu-group" >
+                <li>home</li>
+                <li>검색</li>
+                <li>글쓰기</li>
+                <li>좋아요</li>
+                <li>프로필</li>
+
+            </ul>
+        </nav>
+    </div>
+</main>
 {% endblock %}
