--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,36 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheet" href="{% static 'css/reset.css' %}">
+    <link href="stylesheet" href="{% static 'css/index.css' %}">
+
+
     <title>{% block tittle %}{% endblock %} 라이언 그램</title>
 </head>
-<body>
+
+<body class ="container">
     <div>
-{% block content %}
-{% endblock %}
-</div>
+        {% block content %}
+        {% endblock %}
+    </div>
+    <div>
+        <nav>
+            <ul class="bottom-menu-group">
+
+                <li><img src="{% static 'icons/home.png'%}" alt="home"></li>
+                <li><img src="{% static 'icons/search.png'%}" alt="search"></li>
+                <li><img src="{% static 'icons/write.png'%}" alt="write"></li>
+                <li><img src="{% static 'icons/like.jpg'%}" alt="like"></li>
+                <li><img src="{% static 'icons/profile.png'%}" alt="profile"></li>
+
+            </ul>
+        </nav>
+    </div>
 </body>
+
 </html>
