--- a/templates/posts/post_card.html
+++ b/templates/posts/post_card.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    {% for object in object_list %}
-    {{object}}
-    {% endfor %}
+
 </body>
 </html>
