--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>post 입력 화면</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}글 입력 {% endblock %}
+
+{%block content %}
+<h1>입력 화면</h1>
+<form action = "{% url 'posts:post-create' %}"method = "POST">
+<div>
+    <lable for="">이미지</lable>
+    <input type ="file" name="image/*" id="id_image">
+</div>
+</form>
+{% endblock %}
